# Boonta

./: .env.example  .gitignore  BACKTEST_HANDOVER.md  CLAUDE.md  E2E_HANDOVER.md  README.md  alembic.ini  boonta_v2_requirements.md  cli.py  design2.md  docker-compose.yml  kyi_doc_utf8.txt  pyproject.toml  sed_doc_utf8.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  entries.py  fetch.py  horses.py  jockeys.py  model.py  predictions.py  races.py
backend/app/fetchers/: __init__.py  base.py  netkeiba.py
backend/app/ml/: __init__.py  features.py  pace.py  predictor.py  trainer.py
backend/app/models/: __init__.py  base.py  entry.py  horse.py  jockey.py  prediction.py  race.py  result.py
backend/app/repositories/: __init__.py  base.py  entry_repository.py  horse_repository.py  jockey_repository.py  prediction_repository.py  race_repository.py  result_repository.py
backend/app/schemas/: __init__.py  common.py  entry.py  horse.py  jockey.py  prediction.py  race.py  result.py  simulation.py
backend/app/services/: __init__.py  feature_service.py  prediction_service.py  race_service.py  simulation_service.py
backend/data/: g1_race_ids_2025_2026.json  g3_race_ids.json
backend/modal_app/: __init__.py  client.py  features.py  functions.py  image.py
backend/scripts/: collect_training_data.py  fetch_grade_race_ids.py  train_model.py  upload_model_to_modal.py
backend/tests/: conftest.py
backend/tests/fixtures/: factories.py
backend/tests/integration/api/: conftest.py  test_entries_api.py  test_horses_api.py  test_predictions_api.py  test_races_api.py
backend/tests/unit/ml/: test_pace.py
backend/tests/unit/repositories/: __init__.py  test_base_repository.py  test_entry_repository.py  test_horse_repository.py  test_jockey_repository.py  test_prediction_repository.py  test_race_repository.py  test_result_repository.py
backend/tests/unit/services/: __init__.py  test_feature_service.py  test_prediction_service.py  (+2 more)
(+188 files in other folders)
